fix hero title spacing in mobile device

--- a/styles/pages/_home.scss
+++ b/styles/pages/_home.scss
@@ -143,7 +143,9 @@
     line-height: 1;
     font-weight: 650;
     @include media('<=tablet') {
-      font-size: calc(100vw / 768 * 78);
+      font-size: calc(100vw / 768 * 77);
+      letter-spacing: -1.5px;
+      line-height: 1.2;
     }
   }
   &__description {
